--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Lector QR agencia tributaria</h1>
+
+
+    <h3>Url de ejemplo:</h3>
+    <ul>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20115447431&T=e13pA2drMVUkyX/Sm7sxlg==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025876138&T=4AgE/CaDlz0QHAslTOVo2w==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20069832775&T=VSfzjlEdxtVufiqk5GEXMA==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20074742733&T=MEEztSBMJYJ71KG3C7lJYw==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025874943&T=HK5XZ/9iGrX0GIUddHpotA==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025874835&T=UDnqktVU4B3Pgd2PlgsAbg==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025874983&T=ieN505r55Qcy1XKE+fkW3g==</li>
+        <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025875718&T=mtWbGnaFM9LYsOx5hcMQSQ==</li>
+    </ul>
+    <br>
     <p>Inserta URL</p>
     
         <input type="text" name="formUrl" id="url">
