--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025874835&T=UDnqktVU4B3Pgd2PlgsAbg==</li>
         <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025874983&T=ieN505r55Qcy1XKE+fkW3g==</li>
         <li>https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025875718&T=mtWbGnaFM9LYsOx5hcMQSQ==</li>
-        <li><textarea name="" id="" cols="110" rows="1">https://www2.agenciatributaria.gob.es/wlpl/ADMF-JDIT/V?C=20025875718&T=mtWbGnaFM9LYsOx5hcMQSQ==</textarea></li>
     </ul>
     <br>
     <p>Inserta URL</p>
@@ -37,7 +36,7 @@
         </tbody>
     </table>
 
-        <button onclick="exportTableToCSV('members.csv')">Export HTML Table To CSV File</button>
+        <button onclick="exportTableToCSV('codigos.csv')">Exportar a excel</button>
     </body>
 
     <script src="./main.js"></script>
