--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Lector QR </title>
 </head>
-<body>
+<body class="body">
     <h1>Lector QR agencia tributaria</h1>
 
 
